fixed girl z-index

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
   font-size: 16px;
 }
 
+.container {
+  max-width: 1140px;
+  width: 100%;
+}
+
 h2 {
   font-size: 48px;
   font-weight: bold;
@@ -41,11 +46,12 @@ h2 {
 .header {
   background-color: #F8F6F7;
   position: relative;
+  overflow: hidden;
 }
 
 .header .container {
   position: relative;
-  padding: 30px 0 130px;
+  padding: 30px 15px 130px;
 }
 
 .header-top {
@@ -65,6 +71,13 @@ h2 {
   bottom: 0;
   max-width: 524px;
   width: 100%;
+  z-index: 1;
+}
+
+.hero {
+  position: relative;
+  z-index: 2;
+  max-width: 400px;
 }
 
 .header-girl:before {
